Fix collapsed view with simul

--- a/src/components/ScheduleView/index.css
+++ b/src/components/ScheduleView/index.css
@@ -1,4 +1,5 @@
-.schedule--evenlySpaced .schedule-draggableEvent {
+.schedule--evenlySpaced
+  .schedule-draggableEvent:not(.schedule-draggableEvent--withSimul) {
   height: 4em;
 }
 
